perm gem vm args